# ultrasonic-holography

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  requirements.txt
acoustic_sim/: hat.py  requirements.txt  run.py
acoustic_sim/notebooks/: Untitled.ipynb  gen_pressure_field.ipynb  gorkov.ipynb  gs-asa.ipynb  hat.ipynb
acoustic_sim/notebooks/.ipynb_checkpoints/: gorkov-checkpoint.ipynb  gs-asa-checkpoint.ipynb  hat-checkpoint.ipynb
acoustic_sim/rust/: Cargo.toml
bad_apple/: README.md  bad-apple-tsp.json  bad-apple-unsorted.json  badapple_contour.ipynb  config.pkl  generate_video.py  generate_video_and_config.py  make_pickles_video.py  play_json.py  play_pickles.py  play_pickles_all.py  split_into_frames.py  workflow.py
better_gui/: better_gui.py  better_gui.ui  main.py  new_gui.py  new_gui.ui
blender_sim/: README.md  blender_scripting.py  main.blend  main.blend1  old_path_display.py  rust_to_blender.py
fpga/: .gitignore  README.md  de1_soc_top.sv  de1_soc_top.tcl  hex_to_7seg.sv  phase_parser.sv  receiver.sv  seven_seg.sv  sync_in.sv  tb_de1_soc_top.sv  tb_pwm.sv  tb_receiver.sv  test_ftd2xx.py  top.sv
fpga/cyclone10_lp/: .gitignore  create_proj.sh  cyclone10_lp.sdc  cyclone10_lp.svh  cyclone10_lp.tcl  jic_conversion_setup.cof  tb_top.sv  top.tcl
fpga/de0_cv/: .gitignore  create_proj.sh  de0_cv_top.sv  de0_cv_top.tcl  tb_de0_cv_top.sv
fpga/de1_soc/: .gitignore  create_proj.sh  de1_soc.svh  de1_soc_top.sv  de1_soc_top.tcl  tb_de1_soc_top.sv
fpga/ex_ft2232h_to_de1_soc/: .gitignore  async245.svh  proto245.tcl  top.sdc  top.sv
fpga/ip/: PLL_24M576_TO_10M24_CYCLONE10LP.ppf  PLL_24M576_TO_10M24_CYCLONE10LP.qip  PLL_24M576_TO_10M24_CYCLONE10LP.v  PLL_24M576_TO_10M24_CYCLONE10LP_bb.v  pll50.bsf  pll50.cmp  pll50.ppf  pll50.qip  pll50.sip  pll50.spd  pll50.v  pll50_sim.f  pll_50m_20m48_10lp.ppf  pll_50m_20m48_10lp.qip  pll_50m_20m48_10lp.v  pll_50m_20m48_10lp_bb.v
fpga/scripts/: altium_csv_to_qsf.py  generate_pin_assignments.py  net_name_map.py  pinout.json
fpga/shared/: hex_to_7seg.sv  modulation.sv  phase_calibration.sv  phase_parser.sv  pwm.sv  receiver.sv  sync_receiver.sv  sync_sender.sv  tb_modulation.sv  tb_phase_calibration.sv  tb_phase_parser.sv  tb_pwm.sv  tb_receiver.sv  tb_sync_in.sv  tb_sync_receiver.sv  tb_sync_sender.sv  top.sv
fpga/sim/: transcript  ultrasonic.cr.mti  ultrasonic.mpf  vsim.wlf
fpga/sim/work/: _info  (+4 more)
fpga/tests/: Cargo.toml
fpga/tests/board/: Cargo.toml
fpga/tests/board/src/: fpga.rs
fpga/tests/board_interface/: Cargo.toml  main.rs
fpga/tests/de1_soc_ftd2xx/: Cargo.toml  main.rs
fpga/tests/de1_soc_top/: Cargo.toml  main.rs
fpga/tests/list_devices/: Cargo.toml  main.rs
fpga/tests/phase_calibration/: Cargo.toml  main.rs
fpga/tests/src/: main.rs
fpga/tests/test_lib/: Cargo.toml
fpga/tests/test_lib/src/: board.rs  fpga.rs  lib.rs
fpga/tests/two_boards/: Cargo.toml  main.rs
ft2232h/: README.md  ft_prog_dual_fifo.xml
hand_control/: hand.py
music/: Route 209.mid  coconut.mid  lake.mid  play_midi.py  river-flows.mid
position_control/: all_control.py  hand.py  hand_discreet.py  haptic.py  keyboard_control.py  mouse_control.py  send_one_position.py  sonic_surface_all_control.py
python_sonic_surface/: copyjava.py  port_detector.py  python_sonic_surface.py  requirements.txt  serial_read.py
rust_rev1/: Cargo.toml
rust_rev1/src/: board.rs  fpga.rs  lib.rs  mock_ftdi.rs
rust_sonic_surface/: Cargo.toml  gen_beam_angle.py  requirements.txt
rust_sonic_surface/src/: circle_test.rs  circle_test_no_redis.rs  cube_test.rs  lib.rs  line_test.rs  line_test_no_redis.rs  main.rs  onoff.rs  open_sauce.rs  play_midi.rs  play_sound.rs  redis_positions_to_ftdi.rs  redis_positions_to_serial.rs  rust_to_blender_redis.rs  rust_to_blender_zmq.rs  serial_port_helper.rs  sonic_surface.rs  sonicsurface.rs  square_test.rs  square_test_no_redis.rs  temp.rs  turn_off.rs
rust_sonic_surface/src/hat/: gorkov.rs  hat.rs  hat_runner.rs  mod.rs  util.rs
rust_sonic_surface/src/movement/: particle.rs
rust_sonic_surface/src/scripts/: circle_test.rs  gen_pressure_field.rs  line_test.rs  onoff.rs  tones.rs  tones_ftdi.rs  vertical_test.rs
(+48 files in other folders)
