[package]
name = "rust_sonic_surface"
version = "0.0.0"
authors = ["Kevin"]
edition = "2021"

[dependencies]
serialport = "4.2.2"
eframe = "0.19"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_derive = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
ndarray = "0.15"
ndarray-linalg = "0.15"
redis = "0.24.0"
bincode = "1.3.3"
zmq = "0.10.0"
num = "0.4.1"
scilib = "1.0.0"
rmp-serde = "1.1.2"
rev1 = { path = "../rust_rev1/" }
serde_json = "1.0.114"

[[bin]]
name = "circle_test"
path = "src/circle_test.rs"

[[bin]]
name = "cube_test"
path = "src/cube_test.rs"
